complete exercise regarding separation of concerns (js and css)

--- a/projects/dom_challenge/styles.css
+++ b/projects/dom_challenge/styles.css
@@ -1,3 +1,13 @@
 h1 {
   color: red;
 }
+
+.invisible {
+  visibility: hidden;
+}
+
+.huge {
+  color: blue;
+  font-size: 10rem;
+  font-weight: bolder;
+}
