--- a/projects/html_professional_site/styles/index.css
+++ b/projects/html_professional_site/styles/index.css
@@ -1,11 +1,39 @@
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/margin */
 body {
   margin:0;
+  text-align: center;
 }
 
 h1 {
-  margin-top: 0;
+  margin: 0 auto;
 }
 
-div {
+.pro-span {
+  text-decoration: underline;
+}
+
+.top-container {
   background-color: #E4F9F5;
+  position: relative;
+  padding-top: 100px;
+}
+
+.middle-container {
+  background-color: red;
+}
+
+.bottom-container {
+  background-color: yellow;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
