embed Ubuntu and Montserrat fonts from Google Fonts into stylesheet per challenge in lesson 75

--- a/projects/tindog_bootstrap/css/styles.css
+++ b/projects/tindog_bootstrap/css/styles.css
@@ -1,3 +1,10 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1 {
+  font-family: 'Ubuntu', sans-serif;
+}
 #title {
   background-color: #ff4c68;
 }
