fix non-bolding H1 problem in lesson 75

--- a/projects/tindog_bootstrap/css/styles.css
+++ b/projects/tindog_bootstrap/css/styles.css
@@ -1,12 +1,21 @@
+/* https://fonts.google.com/specimen/Montserrat */
+
+/* tag selectors */
 body {
-  font-family: 'Ubuntu', sans-serif;
+  /* font-family: 'Ubuntu', sans-serif; */
 }
 
 h1 {
-  font-family: 'Montserrat-black', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
   size: 3rem;
   line-height: 1.5;
 }
+
+/* id selectors */
 #title {
   background-color: #ff4c68;
 }
+
+
+/* class selectors */
