--- a/projects/tindog_bootstrap/css/styles.css
+++ b/projects/tindog_bootstrap/css/styles.css
@@ -5,6 +5,11 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+}
+
 .container-fluid {
   padding: 3% 15% 7%;
 }
@@ -37,8 +42,8 @@ body {
 }
 
 .title-h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
+  /* font-family: 'Montserrat', sans-serif;
+  font-weight: 900; */
   font-size: 3.5rem;
   line-height: 1.5;
 }
@@ -68,8 +73,8 @@ body {
   }
 
   .title-h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
+    /* font-family: 'Montserrat', sans-serif;
+    font-weight: 900; */
     font-size: 3.0rem;
     line-height: 1.5;
   }
@@ -100,8 +105,8 @@ body {
 }
 
 .feature-h3 {
-  font-family: Montserrat;
-  font-weight: bold;
+  /* font-family: Montserrat;
+  font-weight: bold; */
   line-height: 1.5rem;
   color: #000;
 }
@@ -120,8 +125,8 @@ body {
 }
 
 .testimonial-h2 {
-  font-family: "Montserrat";
-  font-weight: bold;
+  /* font-family: "Montserrat";
+  font-weight: bold; */
 }
 
 .testimonial-image {
@@ -147,8 +152,8 @@ body {
 
 @media (max-width: 990px) {
   .testimonial-h2 {
-    font-family: "Montserrat";
-    font-weight: bold;
+    /* font-family: "Montserrat";
+    font-weight: bold; */
     font-size: 1.0rem;
   }
 }
@@ -160,8 +165,8 @@ body {
 }
 
 .pricing-h2 {
-  font-family: "Montserrat";
-  font-weight: bold;
+  /* font-family: "Montserrat";
+  font-weight: bold; */
 }
 
 .pricing-col {
@@ -180,8 +185,8 @@ body {
 }
 
 .cta-h3 {
-  font-family: "Montserrat";
-  font-weight: bold;
+  /* font-family: "Montserrat";
+  font-weight: bold; */
 }
 
 /* Footer Section */
@@ -191,7 +196,8 @@ body {
 }
 
 .footer-h3 {
-  font-family: "Montserrat";
+  /* font-family: "Montserrat"; */
+  font-weight: lighter;
   font-size: 1.0rem;
   color: #8f8f8f;
 }
