complete weather api exercise

--- a/projects/weather_express/views/pages/weather.ejs
+++ b/projects/weather_express/views/pages/weather.ejs
@@ -11,6 +11,8 @@
   <p>
     <%= msg %>
   </p>
+  <p>
+    Weather in <strong><%= city %></strong> is <i><%= weather %></i>.
+  </p>
 </body>
-
 </html>
