--- a/projects/mailchimp_express/views/pages/success.ejs
+++ b/projects/mailchimp_express/views/pages/success.ejs
@@ -15,8 +15,8 @@
     <input type="email" name="email-ignore" class="form-control bottom" value="<%= vars.email %>" disabled>
     <div class="checkbox mb-3">
       <label>
-        <input type="checkbox" name="unsubscribed" value="yes" <%= vars.subscribed == 0 ? "checked" : "" %>> Unsubscribe
-        <input type="hidden" name="edit" value="1" />
+        <input type="checkbox" name="unsubscribed" value="yes" <%= vars.status == "unsubscribed" ? "checked" : "" %>> Unsubscribe
+        <input type="hidden" name="update_existing" value="<%= vars.update_existing ? 1 : 0 %>" />
         <input type="hidden" name="email" value="<%= vars.email %>" />
       </label>
     </div>
