--- a/projects/blog_challenge/views/home.ejs
+++ b/projects/blog_challenge/views/home.ejs
@@ -1,7 +1,7 @@
-<%- include('header.ejs') %>
+<%- include('partials/header.ejs') %>
 
 <h1>Home</h1>
 <p>
   <%= msg %>
 </p>
-<%- include('footer.ejs') %>
+<%- include('partials/footer.ejs') %>
