complete challenge 8 of blog project

--- a/projects/blog_challenge/views/compose.ejs
+++ b/projects/blog_challenge/views/compose.ejs
@@ -2,7 +2,7 @@
 
 <h1>Compose</h1>
 <form class="compose" action="/compose" method="post">
-  <input type="text" name="data" placeholder="Enter text here">
+  <input type="text" name="title" placeholder="Blog Title">
   <input type="submit" value="Publish">
 </form>
 <%- include('partials/footer.ejs') %>
