--- a/projects/blog_challenge/views/compose.ejs
+++ b/projects/blog_challenge/views/compose.ejs
@@ -2,7 +2,10 @@
 
 <h1>Compose</h1>
 <form class="compose" action="/compose" method="post">
-  <input type="text" name="title" placeholder="Blog Title">
-  <input type="submit" value="Publish">
+  <label for="title">Title</label>
+  <input type="text" class="form-control input-margin" name="title" placeholder="Blog Title">
+  <label for="post">Post</label>
+  <textarea name="post" class="form-control input-margin" rows="4" cols="30" placeholder="Enter your post here"></textarea>
+  <button class="btn btn-primary" type="submit">Publish</button>
 </form>
 <%- include('partials/footer.ejs') %>
