--- a/projects/blog_challenge/views/partials/footer.ejs
+++ b/projects/blog_challenge/views/partials/footer.ejs
@@ -1,6 +1,7 @@
 
 </div>
-<div class="footer-padding"></div>
+</main>
+<div class="footer-padding">
   <div class="footer">
     <p>Made with ❤️ by The App Brewery</p>
   </div>
