--- a/projects/blog_challenge/views/home.ejs
+++ b/projects/blog_challenge/views/home.ejs
@@ -4,10 +4,11 @@
 <p>
   <%= msg %>
 </p>
-<% for(i = 0; i < blog.posts.length; i++) { %>
+<% for(i = (blog.posts.length - 1); i >= 0; i--) { %>
 <h2><%= blog.posts[i].title %></h2>
 <p>
   <%= blog.posts[i].post %>
 </p>
+<p><i><small><%= blog.posts[i].date %></small></i></p>
 <% } %>
 <%- include('partials/footer.ejs') %>
