--- a/projects/blog_challenge/views/home.ejs
+++ b/projects/blog_challenge/views/home.ejs
@@ -4,11 +4,15 @@
 <p>
   <%= msg %>
 </p>
-<% for(i = (blog.posts.length - 1); i >= 0; i--) { %>
-<h2><%= blog.posts[i].title %></h2>
 <p>
-  <%= blog.posts[i].post %>
+  <strong>Contribute to our blog!</strong> <a href="/compose">Click here</a>
 </p>
-<p><i><small><%= blog.posts[i].date %></small></i></p>
+<% for(i = (posts.length - 1); i >= 0; i--) { %>
+<h2><a href="/post/<%= posts[i].id %>"><%= posts[i].title %></a></h2>
+<p>
+  <%= _.truncate(posts[i].post, { 'length': 100, 'separator': ' '}); %>
+  (<a href="/post/<%= posts[i].id %>">read more</a>)
+</p>
+<p><i><small><%= posts[i].date %></small></i></p>
 <% } %>
 <%- include('partials/footer.ejs') %>
