--- a/projects/todolist_ejs/public/css/styles.css
+++ b/projects/todolist_ejs/public/css/styles.css
@@ -23,6 +23,13 @@ h1 {
   text-align: center;
 }
 
+#timestamp {
+  text-align: center;
+  max-width: 400px;
+  font-size: 0.75rem;
+  margin: 50px auto;
+}
+
 .item {
   min-height: 70px;
   display: flex;
@@ -52,6 +59,10 @@ p {
 }
 
 form {
+  margin: 0;
+}
+
+form .item {
   text-align: center;
   margin-left: 20px;
 }
@@ -93,4 +104,8 @@ footer {
   color: white;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
+}
+
+footer p {
+  font-size: 1rem;
 }
