--- a/projects/todolist_ejs/views/todolist.ejs
+++ b/projects/todolist_ejs/views/todolist.ejs
@@ -1,17 +1,22 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<%- include('partials/header'); %>
+  <div class="box" id="heading">
     <h1><%- todolist.name() %></h1>
-
-    <ul>
-      <% todolist.forEach(task => { %>
-      <li><%= task.title %></li>
-      <% }); %>
-    </ul>
-
-  </body>
-</html>
+  </div>
+  <div class="box">
+    <% todolist.forEach(task => { %>
+    <div class="item">
+      <input class="checkbox" type="checkbox" name="item" value="<%= task.id %>" <%= task.finished ? "checked" : "" %> onChange="this.form.submit();">
+      <p>
+        <%= task.title %>
+      </p>
+    </div>
+    <% }); %>
+    <form class="item" action="/" method="post">
+      <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+      <button type="submit" name="list" value="<%= todolist.name %>">+</button>
+    </form>
+  </div>
+  <div id="timestamp">
+    <i>Last updated <%= todolist.lastUpdated() %></i>
+  </div>
+<%- include('partials/footer'); %>
