--- a/projects/todolist_mongoose/views/about.ejs
+++ b/projects/todolist_mongoose/views/about.ejs
@@ -5,7 +5,7 @@
 <div class="box">
   <div class="item">
     <p>
-      Lesson 289 in the Udemy course, "The Complete 2020 Web Development Bootcamp"
+      Section 28 in the Udemy course, "<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2020 Web Development Bootcamp</a>"
       by Angela Yu at the London App Brewery.
     </p>
   </div>
