--- a/projects/todolist_mongoose/views/todolist.ejs
+++ b/projects/todolist_mongoose/views/todolist.ejs
@@ -1,22 +1,24 @@
 <%- include('partials/header'); %>
-  <div class="box" id="heading">
-    <h1><%- todolist.name() %></h1>
-  </div>
-  <div class="box">
-    <% todolist.forEach(task => { %>
+<div class="box" id="heading">
+  <h1><%- todolist.name() %></h1>
+</div>
+<div class="box">
+  <% todolist.forEach(task => { %>
+  <form action="/update" method="post">
     <div class="item">
-      <input class="checkbox" type="checkbox" name="item" value="<%= task.id %>" <%= task.finished ? "checked" : "" %> onChange="this.form.submit();">
+      <input class="checkbox" type="checkbox" name="item" value="<%= task.id %>" <%= task.finished ? "checked" : "" %>>
       <p>
         <%= task.title %>
       </p>
     </div>
-    <% }); %>
-    <form class="item" action="/" method="post">
-      <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-      <button type="submit" name="list" value="<%= todolist.name %>">+</button>
-    </form>
-  </div>
-  <div id="timestamp">
-    <i>Last updated <%= todolist.lastUpdated() %></i>
-  </div>
+  </form>
+  <% }); %>
+  <form class="item" action="/" method="post">
+    <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+    <button type="submit" name="list" value="<%= todolist.name %>">+</button>
+  </form>
+</div>
+<div id="timestamp">
+  <i>Last updated <%= todolist.lastUpdated() %></i>
+</div>
 <%- include('partials/footer'); %>
