complete todolist application with custom lists and backends for both in memory arrays and persistent storage via mongodb

--- a/projects/todolist_mongoose/public/css/styles.css
+++ b/projects/todolist_mongoose/public/css/styles.css
@@ -19,11 +19,16 @@ h1 {
 }
 
 #heading {
-  background-color: #A683E3;
+  background-color: #6630c2;
   text-align: center;
 }
 
-#timestamp {
+#lists {
+  background-color: #403e3f;
+  text-align: center;
+}
+
+.timestamp {
   text-align: center;
   max-width: 400px;
   font-size: 0.75rem;
