update front-end to show which backend is in use

--- a/projects/todolist_mongoose/views/todolist.ejs
+++ b/projects/todolist_mongoose/views/todolist.ejs
@@ -37,6 +37,6 @@
 </div>
 <% } %>
 <div class="timestamp">
-  <i>Last updated <%= todolist.lastUpdated() %></i>
+  <i>Last updated <%= todolist.lastUpdated() %> (<%= todolist._backend %>)</i>
 </div>
 <%- include('partials/footer'); %>
