--- a/projects/todolist_mongoose/views/partials/footer.ejs
+++ b/projects/todolist_mongoose/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 
 <footer>
-  <p><a href="/">Home</a> | <a href="/about">About</a></p>
+  <p><a href="/">Home</a> | <a href="/p/about">About</a></p>
   Copyright 2020 Brainvat
 </footer>
 </body>
