--- a/projects/secrets_auth/views/login.ejs
+++ b/projects/secrets_auth/views/login.ejs
@@ -3,6 +3,8 @@
 <div class="container mt-5">
   <h1>Login</h1>
 
+  <%- include('partials/error') %>
+
   <div class="row">
     <div class="col-sm-8">
       <div class="card">
