implement untested google oath login for lesson 413

--- a/projects/secrets_auth/public/css/styles.css
+++ b/projects/secrets_auth/public/css/styles.css
@@ -16,6 +16,7 @@ body {
 }
 
 #error {
-  color: red;
-  background-color: yellow;
+  color: #ffbcbc;
+  background-color: #562349;
+  margin-bottom: -1rem;
 }
