--- a/projects/secrets_auth/views/login.ejs
+++ b/projects/secrets_auth/views/login.ejs
@@ -36,6 +36,14 @@
           </a>
         </div>
       </div>
+      <div class="card">
+        <div class="card-body">
+          <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
+            <i class="fab fa-facebook"></i>
+            Sign In with Facebook
+          </a>
+        </div>
+      </div>
     </div>
 
   </div>
