--- a/projects/secrets_auth/views/register.ejs
+++ b/projects/secrets_auth/views/register.ejs
@@ -35,6 +35,14 @@
           </a>
         </div>
       </div>
+      <div class="card social-block">
+        <div class="card-body">
+          <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
+            <i class="fab fa-facebook"></i>
+            Sign Up with Facebook
+          </a>
+        </div>
+      </div>
     </div>
 
   </div>
