--- a/projects/keeper_react/public/styles.css
+++ b/projects/keeper_react/public/styles.css
@@ -5,14 +5,21 @@
 }
 html {
   font-family: "Montserrat", sans-serif;
+  position: relative;
+  min-height: 90%;
 }
+
 body {
   background: #eee;
   padding: 0 16px;
+  margin-bottom: 2.5rem;
+  background-color: #cf7500;
+  background-image: url("https://www.transparenttextures.com/patterns/batthern.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #f0a500; /* #f5ba13; */
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -30,28 +37,92 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
+  padding-top: 1.5rem;
+}
+
+.footer-padding {
+  padding-bottom: 2.5rem;
 }
 
 footer p {
-  color: #ccc;
+  margin-top: 25px;
+  color: #fff;
 }
+
 .note {
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
-  width: 300px;
+  width: 240px;
   margin: 16px;
   float: left;
 }
-.note h1 {
-  font-size: 1.2em;
-  margin-bottom: 6px;
-  font-weight: 900
+
+.note--blocked {
+  background: #cf0d00; /* #005acf; /* red; */
+  color: white;
 }
+
+.note-blocked h1 {
+  font-weight: 900;
+}
+
+.note h1 {
+  font-size: 1.1em;
+  margin-bottom: 6px;
+}
+
 .note p {
-  font-size: 0.9em;
+  font-size: 1.1em;
   margin-bottom: 10px;
   white-space: pre-wrap;
   word-wrap: break-word;
+}
+
+.note button {
+  position: relative;
+  float: right;
+  margin-right: 10px;
+  color: #f0a500; /* #f5ba13; */
+  border: none;
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+form.create-note {
+  position: relative;
+  width: 480px;
+  margin: 30px auto 20px auto;
+  background: #fff;
+  padding: 15px;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
+form.create-note input,
+form.create-note textarea {
+  width: 100%;
+  border: none;
+  padding: 4px;
+  outline: none;
+  font-size: 1.2em;
+  font-family: inherit;
+  resize: vertical;
+}
+form.create-note button {
+  position: absolute;
+  right: 18px;
+  bottom: -18px;
+  background: #f0a500; /* #f5ba13; */
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
 }
