apply minor style changes to bring Keeper and Secrets iconography closer together

--- a/projects/keeper_react_node/public/css/react-styles.css
+++ b/projects/keeper_react_node/public/css/react-styles.css
@@ -31,6 +31,10 @@ header h1 {
   font-weight: 200;
 }
 
+header h1 svg {
+  margin-right: 1rem;
+}
+
 footer {
   position: absolute;
   text-align: center;
